--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "gray-matter": "^4.0.3",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
