--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "eslint-config-next": "13.4.2",
     "gray-matter": "^4.0.3",
     "next": "13.4.2",
+    "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
