--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gray-matter": "^4.0.3",
     "next": "13.4.2",
     "next-mdx-remote": "^4.4.1",
+    "nodemailer": "^6.9.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
