--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.5",
     "@types/node": "20.1.7",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -22,6 +23,7 @@
     "next": "13.4.2",
     "next-mdx-remote": "^4.4.1",
     "nodemailer": "^6.9.3",
+    "notion-to-md": "^3.1.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
