--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.5",
+    "@prisma/client": "^5.0.0",
     "@types/node": "20.1.7",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "prisma": "^5.0.0"
   }
 }
