--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "encoding": "^0.1.13",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8",
     "prisma": "^5.0.0"
